solucion al error del proxy

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,16 +2,18 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:5000",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@tinymce/tinymce-react": "^5.0.1",
     "bootstrap": "^5.3.3",
-    "react": "^18.3.1",
+    "draft-js": "^0.11.7",
+    "http-proxy-middleware": "^3.0.0",
+    "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
-    "react-dom": "^18.3.1",
+    "react-dom": "^18.2.0",
+    "react-draft-wysiwyg": "^1.15.0",
     "react-helmet": "^6.1.0",
     "react-helmet-async": "^2.0.5",
     "react-router-dom": "^6.23.1",
